# self-aware-pinball

./: .gitignore  LICENSE  README.md
Self-Aware Pinball/: Self-aware Pinball.sln
Self-Aware Pinball/Self-aware Pinball/: Pinball.cs  Self-aware Pinball.csproj
Self-Aware Pinball/Self-aware Pinball/Properties/: AssemblyInfo.cs
arduino/switch-matrix/: switch-matrix.ino
arduino/udp-flippers-serial-switches/: README.md  UDPServer.cpp  udppins-serial.ino
arduino/udppins-serial/: UDPServer.cpp  UDPServer.h  udppins-serial.ino
pinballcontroller/src/Effect/: Socket.idr
remote-control/controller-hs/: pinball-controller.cabal
remote-control/controller-hs/src/: Main.hs
remote-control/controller-idr/: README.md  pinballcontroller.ipkg
remote-control/controller-idr/src/: Pinball.idr
